--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="route.js"></script>
   </head>
   <body>
+    <!-- Message to Update -->
     <h1 id="msg">Redirecting..... Please wait!</h1>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
